fix(security): asegurar aislamiento multi-tenant, gestion de roles y flujo de estados
Este commit resuelve los fallos de seguridad de mayor impacto identificados en la
auditoria del backend y aplica mejoras de higiene en el flujo de datos. Los cambios
estan cubirlos por pruebas unitarias actualizadas en los controladores y servicios
principales.

--- DETALLES DE LOS CAMBIOS ---

1. AISLAMIENTO MULTI-TENANT Y SEGURIDAD DE ACCESO:
- Se eliminaron por completo los headers "X-Empresa-Id" y "x-Usuario-Id" tanto en
  el backend (TicketComentarioController) como en el interceptor de Angular.
- Ahora, todas las operaciones por ID en TicketServiceImpl obtienen el ID de la
  empresa y del usuario directamente del token JWT autenticado en el servidor.
- Toda busqueda individual ahora utiliza ticketRepository.findByIdAndEmpresaId().
  Si el ticket no pertenece a la empresa del usuario, se lanza un error 404 (No encontrado)
  en lugar de un 403, evitando confirmar la existencia de datos ajenos.
- Se configuro como inmutable la relacion de empresa y cliente en el metodo actualizar(),
  ignorando cualquier intento de reasignacion desde el cuerpo de la peticion.

2. PREVENCION DE ESCALADA DE PRIVILEGIOS:
- Se introdujo una lista de roles protegidos del sistema (ADMIN_OWNER, ADMIN_EMPRESA).
- RolServiceImpl ahora rechaza cualquier intento de creacion, modificacion, eliminacion
  o alteracion de permisos sobre estos roles principales como mecanismo de defensa en capa.
- En SecurityConfig se dividieron las rutas de roles y permisos por metodo HTTP:
  permitiendo GET para administradores, pero restringiendo POST/PUT/DELETE estrictamente al ADMIN_OWNER.

3. MANEJO SEGURO DE ERRORES:
- GlobalExceptionHandler ahora captura los errores 500 genericos y retorna un mensaje
  estandard al cliente: "Error interno del servidor".
- Se implemento el logueo detallado en el servidor (traza completa, clase de excepcion,
  usuario, empresa) via SLF4J, evitando que detalles internos de SQL o Hibernate 